done report page, function w/ ui

--- a/app/globals.css
+++ b/app/globals.css
@@ -109,4 +109,22 @@ body {
   .notification-close-logo {
     @apply w-5 h-5 opacity-75 transition-opacity hover:opacity-100 focus:opacity-100 cursor-pointer;
   }
+  .farmerReportTable thead tr th {
+    @apply px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider;
+  }
+  .farmerReportTable thead tr th:first-of-type {
+    @apply w-12;
+  }
+  .farmerReportTable thead tr th:last-of-type {
+    @apply !text-center w-24;
+  }
+  .farmerReportTable tbody {
+    @apply bg-white divide-y divide-gray-200;
+  }
+  .farmerReportTable tbody tr {
+    @apply hover:bg-gray-50;
+  }
+  .farmerReportTable tbody tr td {
+    @apply px-4 py-3 text-sm;
+  }
 }
