--- a/app/globals.css
+++ b/app/globals.css
@@ -167,8 +167,8 @@ body {
   .button {
     @apply cursor-pointer flex items-center justify-center gap-3 py-2 px-6 rounded-2xl;
   }
-  .table {
-    @apply w-full Divide-y Divide-gray-200 farmerReportTable;
+  .table-style {
+    @apply w-full divide-y divide-gray-200;
   }
   .caption {
     @apply sr-only;
@@ -185,6 +185,9 @@ body {
   .table-title-text {
     @apply text-2xl;
   }
+  .table-link {
+    @apply flex items-center justify-center py-2 px-4 rounded-xl !text-gray-800 transition-colors active:ring-1 active:ring-offset-2;
+  }
   .nav-link {
     @apply flex items-center gap-3 px-3 py-2 text-gray-700 rounded-lg hover:bg-green-50 hover:text-green-700 transition-colors;
   }
@@ -193,8 +196,5 @@ body {
   }
   .nav-divider {
     @apply text-lg font-serif tracking-wide text-gray-400 font-bold my-3 ml-1;
-  }
-  .table-link {
-    @apply flex items-center justify-center py-2 px-4 rounded-xl !text-gray-800 transition-colors active:ring-1 active:ring-offset-2;
   }
 }
