--- a/app/globals.css
+++ b/app/globals.css
@@ -167,6 +167,12 @@ body {
   .button {
     @apply cursor-pointer flex items-center justify-center gap-3 py-2 px-6 rounded-2xl;
   }
+  .submit-button {
+    @apply bg-green-600 text-white hover:bg-green-700 transition-colors disabled:opacity-50;
+  }
+  .cancel-button {
+    @apply bg-red-500 hover:!bg-red-600 !text-white !py-2 !px-6 !rounded-2xl flex items-center justify-center gap-3 transition-colors disabled:opacity-50;
+  }
   .table-style {
     @apply w-full divide-y divide-gray-200;
   }
@@ -199,5 +205,8 @@ body {
   }
   .table-action {
     @apply flex flex-row justify-center items-center gap-2;
+  }
+  .table-notice {
+    @apply px-2 py-2 rounded-full bg-red-300 text-red-900;
   }
 }
