--- a/app/globals.css
+++ b/app/globals.css
@@ -165,7 +165,7 @@ body {
     @apply text-gray-500;
   }
   .button {
-    @apply cursor-pointer flex items-center justify-center gap-3 py-2 px-6 rounded-xl;
+    @apply cursor-pointer flex items-center justify-center gap-3 py-2 px-6 rounded-xl text-nowrap;
   }
   .submit-button {
     @apply bg-green-600 text-white hover:bg-green-700 transition-colors disabled:opacity-50;
@@ -206,7 +206,7 @@ body {
   .table-notice {
     @apply px-4 py-2 rounded-full bg-red-300 text-red-900;
   }
-  .profile-link {
-    @apply bg-orange-300 hover:bg-orange-400 active:ring-orange-800;
+  .profile-link-button-design {
+    @apply bg-orange-300 hover:bg-orange-400 active:ring-orange-500;
   }
 }
