WIP: fixing ui of 2nd farmer detail

--- a/app/globals.css
+++ b/app/globals.css
@@ -155,9 +155,9 @@ body {
   .p-error {
     @apply text-red-500;
   }
-  /* .form {
-    @apply;
-  } */
+  .form {
+    @apply space-y-6;
+  }
   .logo {
     @apply size-6;
   }
