WIP: adding a dashboard

--- a/app/globals.css
+++ b/app/globals.css
@@ -316,3 +316,9 @@ body {
   margin-left: 15px;
   animation: loader_5191 675ms ease-in-out 600ms infinite;
 }
+
+#mapCanvas {
+  height: 500px; /* Give it a clear height */
+  margin-top: 1000px; /* Push it far down the page */
+  background-color: red;
+}
