--- a/app/globals.css
+++ b/app/globals.css
@@ -171,7 +171,7 @@ body {
     @apply text-gray-500;
   }
   .button {
-    @apply cursor-pointer flex items-center justify-center gap-3 py-2 px-6 rounded-xl text-nowrap capitalize tracking-wider transition-all;
+    @apply cursor-pointer flex items-center justify-center gap-3 py-2 px-6 rounded-xl text-nowrap tracking-wider transition-all;
   }
   .slimer-button {
     @apply !px-3 !py-1 !rounded-lg tracking-normal;
