--- a/app/globals.css
+++ b/app/globals.css
@@ -267,7 +267,7 @@ body {
     @apply font-semibold;
   }
   .user-profile-form {
-    @apply form-div grid sm:grid-cols-2 md:grid-cols-4 gap-4;
+    @apply grid sm:grid-cols-2 md:grid-cols-4 gap-4;
   }
 }
 
