--- a/app/globals.css
+++ b/app/globals.css
@@ -225,7 +225,7 @@ body {
     @apply flex flex-row justify-center items-center gap-2;
   }
   .table-notice {
-    @apply px-4 py-2 rounded-full bg-red-300 text-red-900;
+    @apply px-3 py-1 rounded-xl bg-red-100 text-red-900;
   }
   .profile-link-button-design {
     @apply bg-orange-400 hover:bg-orange-500 active:ring-orange-600 text-white;
