--- a/app/globals.css
+++ b/app/globals.css
@@ -269,6 +269,12 @@ body {
   .user-profile-form {
     @apply grid sm:grid-cols-2 md:grid-cols-4 gap-4;
   }
+  .create-link-userPass-agri-button {
+    @apply text-left w-full text-nowrap px-4 py-3 hover:bg-gray-100 transition-colors text-sm font-medium text-gray-700 border-b border-gray-100;
+  }
+  .modal-form {
+    @apply fixed inset-0 bg-black/30 backdrop-blur-sm z-30 flex items-center justify-center p-4 overflow-hidden;
+  }
 }
 
 /* loading style */
