--- a/app/globals.css
+++ b/app/globals.css
@@ -275,6 +275,9 @@ body {
   .modal-form {
     @apply fixed inset-0 bg-black/30 backdrop-blur-sm z-30 flex items-center justify-center p-4 overflow-hidden;
   }
+  .link {
+    @apply text-xs text-gray-700 truncate flex-1 font-mono;
+  }
 }
 
 /* loading style */
