--- a/app/globals.css
+++ b/app/globals.css
@@ -58,9 +58,9 @@ body {
   .auth_form form {
     @apply space-y-6;
   }
-  .auth_form form label {
+  /* .auth_form form label {
     @apply text-sm font-medium text-gray-700 block;
-  }
+  } */
   .auth_form form input {
     @apply w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-500 focus:border-green-500 transition-colors duration-200;
   }
@@ -134,6 +134,15 @@ body {
   .input {
     @apply w-full px-3 py-2 bg-gray-50 border border-gray-200 rounded-md text-gray-900 disabled:text-gray-500;
   }
+  .input-green-ring {
+    @apply focus:ring-2 focus:ring-green-500 focus:border-green-500;
+  }
+  .input-amber-ring {
+    @apply focus:ring-2 focus:ring-amber-500 focus:border-amber-500;
+  }
+  .input-red-ring {
+    @apply focus:ring-2 focus:ring-red-500 focus:border-red-500;
+  }
   .input-radio {
     @apply !text-green-600 focus:ring-green-500 cursor-pointer !p-0 bg-transparent border-0 !rounded-none;
   }
@@ -172,6 +181,12 @@ body {
   }
   .button {
     @apply cursor-pointer flex items-center justify-center gap-3 py-2 px-6 rounded-xl text-nowrap tracking-wider transition-all;
+  }
+  .hover-green-button {
+    @apply hover:border-green-700 hover:shadow-md hover:bg-green-50;
+  }
+  .hover-blue-button {
+    @apply hover:border-blue-700 hover:shadow-md hover:bg-blue-50;
   }
   .slimer-button {
     @apply !px-3 !py-1 !rounded-lg tracking-normal;
@@ -286,6 +301,12 @@ body {
   }
   .subscript {
     @apply text-[14px] text-gray-400 tracking-wide;
+  }
+  .children-div-loading {
+    @apply [&>div]:bg-gray-300 [&>div]:rounded [&>div]:animate-pulse;
+  }
+  .div-loading {
+    @apply bg-gray-300 rounded animate-pulse;
   }
 }
 
