--- a/app/globals.css
+++ b/app/globals.css
@@ -308,6 +308,9 @@ body {
   .div-loading {
     @apply bg-gray-300 rounded animate-pulse;
   }
+  .no-val {
+    @apply flex flex-col items-center justify-center p-8 text-center border-2 border-dashed border-gray-300 rounded-lg bg-gray-50 max-w-sm mx-auto;
+  }
 }
 
 /* loading style */
