--- a/app/globals.css
+++ b/app/globals.css
@@ -311,6 +311,10 @@ body {
   .no-val {
     @apply flex flex-col items-center justify-center p-8 text-center border-2 border-dashed border-gray-300 rounded-lg bg-gray-50 max-w-sm mx-auto;
   }
+  /* used for the component to elevate/highlight the component from the backgroud  */
+  .component {
+    @apply bg-white rounded-2xl p-4 shadow-sm;
+  }
 }
 
 /* loading style */
