--- a/app/globals.css
+++ b/app/globals.css
@@ -314,6 +314,9 @@ body {
   .component {
     @apply bg-white rounded-lg p-4 shadow-sm;
   }
+  .center-th {
+    @apply [&>div]:flex [&>div]:flex-row [&>div]:justify-center [&>div]:items-center [&>div]:gap-3;
+  }
 }
 
 /* loading style */
