--- a/app/globals.css
+++ b/app/globals.css
@@ -131,7 +131,7 @@ body {
     @apply space-y-1;
   }
   .input {
-    @apply w-full px-3 py-2 bg-gray-50 border border-gray-200 rounded-md text-gray-900 disabled:text-gray-500;
+    @apply w-full px-3 py-2 bg-gray-50 border border-gray-200 rounded-md text-gray-900 disabled:text-gray-500 focus:ring-2 focus:ring-green-500 focus:border-green-500;
   }
   .input-green-ring {
     @apply focus:ring-2 focus:ring-green-500 focus:border-green-500;
@@ -314,9 +314,9 @@ body {
   .component {
     @apply bg-white rounded-lg p-4 shadow-sm;
   }
-  .center-th {
+  /* .center-th {
     @apply [&>div]:flex [&>div]:flex-row [&>div]:justify-center [&>div]:items-center [&>div]:gap-3;
-  }
+  } */
 }
 
 /* loading style */
