--- a/app/globals.css
+++ b/app/globals.css
@@ -146,7 +146,7 @@ body {
     @apply !text-green-600 focus:ring-green-500 cursor-pointer !p-0 bg-transparent border-0 !rounded-none;
   }
   .label {
-    @apply block text-sm font-medium text-gray-700 mb-1;
+    @apply text-sm font-medium text-gray-700 mb-1;
   }
   .title {
     @apply font-semibold text-gray-900 mb-4 tracking-wide;
