--- a/app/globals.css
+++ b/app/globals.css
@@ -44,7 +44,7 @@ body {
   background: var(--background);
   color: var(--text-primary);
   font-family: Arial, Helvetica, sans-serif;
-  height: 100vh;
+  height: 100%;
   width: 100%;
 }
 
